tests/neg/i15998.check
-- [E007] Type Mismatch Error: tests/neg/i15998.scala:6:12 -------------------------------------------------------------
6 |val _ = foo(1) // error
  |            ^
  |            Found:    (1 : Int)
  |            Required: CC[A]
  |            Note that implicit conversions were not tried because the result of an implicit conversion
  |            must be more specific than CC[A]
  |
  |            where:    A  is a type variable
  |                      CC is a type variable with constraint <: [B] =>> Any
  |
  |
  |            One of the following imports might fix the problem:
  |
  |              import scala.math.BigDecimal.int2bigDecimal
  |              import scala.math.BigInt.int2bigInt
  |              import scala.math.Ordered.orderingToOrdered
  |              import scala.util.chaining.scalaUtilChainingOps
  |
  |
  | longer explanation available when compiling with `-explain`
-- [E172] Type Error: tests/neg/i15998.scala:11:11 ---------------------------------------------------------------------
11 |val _ = bar  // error
   |           ^
   |           No implicit search was attempted for parameter x of method bar
   |           since the expected type X is not specific enough
   |
   |           where:    X is a type variable
